Add network actions from AcademySampo
