# src/server/openapi.yaml
@@ -118,15 +118,6 @@ paths:
             application/json:
               schema: 
                 type: object
-                properties: 
-                  data: 
-                    type: array
-                    items: 
-                      type: object
-                    description: Results as an array of objects
-                  sparqlQuery:
-                    type: string
-                    description: The SPARQL query that was used for the results
     get:
         summary: Return all search results as a CSV file
         responses:
@@ -292,6 +283,29 @@ paths:
                   sparqlQuery:
                     type: string
                     description: The SPARQL query that was used for retrieving the metadata
+  /{resultClass}/network/{id}:
+    get: 
+      summary: Return a network of a single resource
+      parameters:
+        - in: path
+          name: resultClass
+          schema: 
+            type: string
+          required: true
+          description: The class of the resource
+        - in: path
+          name: id
+          schema: 
+            type: string
+          required: true
+          description: The URI of the resource
+      responses:
+        '200':
+          description: Network data
+          content:
+            application/json:
+              schema: 
+                type: object
   /full-text-search:
     get:
       summary: Full text search
